; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_gr_udc.c_gr_request_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_gr_udc.c_gr_request_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gr_udc = type { i32 }

@gr_irq = common dso_local global i32 0, align 4
@gr_irq_handler = common dso_local global i32 0, align 4
@IRQF_SHARED = common dso_local global i32 0, align 4
@driver_name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gr_udc*, i32)* @gr_request_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gr_request_irq(%struct.gr_udc* %0, i32 %1) #0 {
  %3 = alloca %struct.gr_udc*, align 8
  %4 = alloca i32, align 4
  store %struct.gr_udc* %0, %struct.gr_udc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.gr_udc*, %struct.gr_udc** %3, align 8
  %6 = getelementptr inbounds %struct.gr_udc, %struct.gr_udc* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @gr_irq, align 4
  %10 = load i32, i32* @gr_irq_handler, align 4
  %11 = load i32, i32* @IRQF_SHARED, align 4
  %12 = load i32, i32* @driver_name, align 4
  %13 = load %struct.gr_udc*, %struct.gr_udc** %3, align 8
  %14 = call i32 @devm_request_threaded_irq(i32 %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, %struct.gr_udc* %13)
  ret i32 %14
}

declare dso_local i32 @devm_request_threaded_irq(i32, i32, i32, i32, i32, i32, %struct.gr_udc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
